# Atlas77

./: .gitignore  CHANGELOG.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE-MIT.md  Makefile  README.md  SYNTAX.md  atlas77.tmLanguage.json  cliff.toml  language-configuration.json  output.atlasc
.github/workflows/: release.yml
atlas77/: README.md  package.json  vsc-extension-quickstart.md
atlas77/syntaxes/: atlas77.tmLanguage.json
atlas_77/: Cargo.toml
atlas_77/src/: main.rs
atlas_frontend/: Cargo.toml
atlas_frontend/src/lexer/: mod.rs
atlas_frontend/src/parser/: ast.rs  mod.rs
atlas_hlir/: Cargo.toml
atlas_hlir/src/: context.rs  data_type.rs  errors.rs  lib.rs  node.rs
atlas_memory/: Cargo.toml
atlas_runtime/: Cargo.toml
atlas_runtime/src/: errors.rs  lib.rs  main.rs  visitor.rs
atlas_runtime/src/stdlib/: math.rs
compiler/atlas_asm/: Cargo.toml
compiler/atlas_codegen/: Cargo.toml
compiler/atlas_codegen/src/: lib.rs  table.rs
compiler/atlas_frontend/: Cargo.toml
compiler/atlas_frontend/src/: lib.rs
compiler/atlas_frontend/src/lexer/: mod.rs
compiler/atlas_frontend/src/parser/: ast.rs  error.rs  mod.rs
compiler/atlas_hir/: Cargo.toml  build.rs
compiler/atlas_hir/src/: arena.rs  error.rs  expr.rs  lib.rs  stmt.rs  ty.rs
compiler/atlas_hir/src/constant_folding/: mod.rs
compiler/atlas_hir/src/dead_code/: mod.rs
compiler/atlas_hir/src/syntax_lowering_pass/: mod.rs
compiler/atlas_hir/src/type_check_pass/: mod.rs
compiler/atlas_macro/: Cargo.toml
compiler/atlas_runtime/: Cargo.toml
compiler/atlas_runtime/src/: visitor.rs
compiler/atlas_vm/: Cargo.toml
compiler/atlas_vm/src/: lib.rs
compiler/atlas_vm/src/libraries/: file.rs  fs.rs  io.rs  list.rs  math.rs  mod.rs  string.rs  time.rs
compiler/atlas_vm/src/memory/: object_map.rs  stack.rs  varmap.rs  vm_data.rs
compiler/atlas_vm/src/runtime/: instruction.rs  mod.rs  vm_state.rs
compiler/atlasc/: Cargo.toml  README.md
compiler/atlasc/src/atlas_asm/: mod.rs
compiler/atlasc/src/atlas_codegen/: arena.rs  mod.rs  table.rs
compiler/atlasc/src/atlas_frontend/: mod.rs
compiler/atlasc/src/atlas_frontend/lexer/: mod.rs  token.rs
compiler/atlasc/src/atlas_frontend/parser/: ast.rs  error.rs  mod.rs
compiler/atlasc/src/atlas_hir/: arena.rs  error.rs  expr.rs  item.rs  signature.rs  stmt.rs  ty.rs
compiler/atlasc/src/atlas_hir/dead_code/: mod.rs
compiler/atlasc/src/atlas_hir/syntax_lowering_pass/: mod.rs
compiler/atlasc/src/atlas_hir/type_check_pass/: mod.rs
docs/: index.html  quick-start.md
docs/docs/latest/: configuration.html  getting_started.html  introduction.html  print.html  searchindex.js  searchindex.json  std.html  toc.html  toc.js
examples/: README.MD  class.atlas  fib.atlas  function.atlas  guessing_game.atlas  hello.atlas  list.atlas  mat_mul.atlas  perfect_number.atlas  speedtest.atlas  square.atlas  std_lib.atlas  string.atlas  string_concat.atlas  struct.atlas  test.atlas  type_check.atlas  while.atlas
libraries/atlas_lib/: Cargo.toml
libraries/std/: fs.atlas  io.atlas  list.atlas  math.atlas  string.atlas
runtime/atlas_vm/: Cargo.toml
runtime/atlas_vm/src/: lib.rs
runtime/atlas_vm/src/libraries/: fs.rs  io.rs  list.rs  math.rs  string.rs  time.rs
runtime/atlas_vm/src/memory/: object_map.rs  stack.rs  varmap.rs  vm_data.rs
runtime/atlas_vm/src/runtime/: instruction.rs  vm_state.rs
src/: lib.rs  main.rs
src/atlas_asm/: mod.rs
src/atlas_c/: mod.rs
src/atlas_c/atlas_asm/: mod.rs
src/atlas_c/atlas_codegen/: arena.rs  mod.rs  table.rs
src/atlas_c/atlas_frontend/lexer/: mod.rs  token.rs
src/atlas_c/atlas_frontend/parser/: ast.rs  error.rs  mod.rs
src/atlas_c/atlas_hir/: arena.rs  error.rs  expr.rs  item.rs  mod.rs  signature.rs  ty.rs
src/atlas_c/atlas_hir/syntax_lowering_pass/: mod.rs
src/atlas_c/atlas_hir/type_check_pass/: mod.rs
src/atlas_codegen/: arena.rs  mod.rs
src/atlas_frontend/: mod.rs
src/atlas_frontend/lexer/: mod.rs
src/atlas_frontend/parser/: arena.rs  ast.rs  error.rs  mod.rs  new_ast.rs  new_mod.rs
src/atlas_hir/: arena.rs  error.rs  expr.rs  item.rs  mod.rs  signature.rs  stmt.rs  ty.rs
src/atlas_hir/syntax_lowering_pass/: mod.rs
src/atlas_hir/type_check_pass/: mod.rs
src/atlas_hlir/: context.rs  errors.rs  ir_builder.rs  mod.rs  node.rs
src/atlas_lib/: mod.rs
src/atlas_lib/graphics/: blue_engine.atlas  utils.atlas
src/atlas_lib/std/: box.atlas  fs.atlas  io.atlas  list.atlas  math.atlas  number.atlas  option.atlas  result.atlas  string.atlas  time.atlas  vec.atlas
src/atlas_macro/: mod.rs
src/atlas_memory/: object_map.rs  stack.rs  varmap.rs  vm_data.rs
src/atlas_runtime/: errors.rs  mod.rs  value.rs  visitor.rs  vm_state.rs
src/atlas_stdlib/: file.atlas  file.rs  io.atlas  io.rs  list.atlas  list.rs  math.atlas  math.rs  mod.rs  string.atlas  string.rs  time.atlas  time.rs
src/atlas_vm/: errors.rs  example.atlasc  instruction.rs  mod.rs  vm_state.rs
src/atlas_vm/libraries/: fs.rs  io.rs  list.rs  math.rs  string.rs  time.rs
src/atlas_vm/memory/: object_map.rs  stack.rs  varmap.rs  vm_data.rs
src/atlas_vm/runtime/: arena.rs  instruction.rs  mod.rs  vm_state.rs
src/atlasc/atlas_asm/: mod.rs
src/atlasc/atlas_codegen/: arena.rs  mod.rs
src/atlasc/atlas_frontend/: mod.rs
src/atlasc/atlas_frontend/lexer/: mod.rs  token.rs
src/atlasc/atlas_frontend/parser/: arena.rs  ast.rs  error.rs  mod.rs
src/atlasc/atlas_hir/: error.rs  expr.rs  item.rs  mod.rs  signature.rs  stmt.rs  ty.rs
src/atlasc/atlas_hir/syntax_lowering_pass/: case.rs  mod.rs
src/atlasc/atlas_hir/type_check_pass/: mod.rs
src/docs/latest/src/: SUMMARY.md  configuration.md  getting_started.md  introduction.md  std.md
