[workspace]
members = [
    "compiler/atlas_codegen",
    "compiler/atlas_frontend",
    "compiler/atlas_hir",
    "compiler/atlas_macro",
    "compiler/atlas_runtime",
    "compiler/atlas_vm",
]

[package]
name = "atlas_77"
version = "0.5.1"
edition = "2021"
description = "Functional programming language with strong interoperability with Rust"
authors = ["Gipson62", "ElhamAryanpur"]
license = "MIT"
repository = "https://github.com/atlas77-lang/Atlas77"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["compilers"]
homepage = "https://atlas77-lang.github.io/Atlas77/docs/latest/index.html"
readme = "README.md"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
atlas_codegen = { path = "compiler/atlas_codegen", version = "0.5.1" }
atlas_frontend = { path = "compiler/atlas_frontend", version = "0.5.1" }
atlas_hir = { path = "compiler/atlas_hir", version = "0.5.1" }
# That's dumb asf, the vm shouldn't be in the ./compiler directory
atlas_vm = { path = "compiler/atlas_vm" }

# For the CLI
clap = { version = "4.5.26", features = ["derive"] }
# For the Standard Library
# For the Parser
bumpalo = "3.16.0"
# For pretty printing of errors
miette = { version = "7.4.0", features = ["fancy"] }
ron = "0.8.1"
