[package]
name = "atlas_77"
version = "0.5.0-alpha1"
edition = "2021"
description = "Functional programming language with strong interoperability with Rust"
authors = ["Gipson62", "ElhamAryanpur"]
license = "MIT"
repository = "https://github.com/atlas77-lang/Atlas77"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["Compilers", "programming-languages"]
homepage = "https://redgear.tk/"
readme = "README.md"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
# Lexer Generator
atlas-core = "0.7.1"
# For the CLI
clap = { version = "4.5.26", features = ["derive"] }
# For the Standard Library
rand = "0.9.0"
time = { version = "0.3.37", features = ["formatting"] }
# For the Parser
bumpalo = "3.16.0"
serde = { version =  "1.0.217", features = ["derive"] }
# For pretty printing of errors
thiserror = { version = "2.0.11" }
miette = { version = "7.4.0", features = ["fancy"] }
ron = "0.8.1"
