[workspace]
members = [
    "compiler/atlasc",
    "libraries/atlas_lib",
    "runtime/atlas_vm",
]

[package]
name = "atlas_77"
version = "0.5.1"
edition = "2021"
description = "Functional programming language with strong interoperability with Rust"
authors = ["Gipson62", "ElhamAryanpur"]
license = "MIT"
repository = "https://github.com/atlas77-lang/Atlas77"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["compilers"]
homepage = "https://atlas77-lang.github.io/Atlas77/docs/latest/index.html"
readme = "README.md"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[lib]
doctest = false

[[bin]]


[dependencies]
atlas_vm = { path = "runtime/atlas_vm", version = "0.5.1" }
atlasc = { path = "compiler/atlasc", version = "0.5.1" }
#atlas_lib = { path = "libraries/atlas_lib", version = "0.5.1" }

# For the CLI
clap = { version = "4.5.26", features = ["derive"] }
# For the Standard Library
# For the Parser
bumpalo = "3.16.0"
# For pretty printing of errors
miette = { version = "7.4.0", features = ["fancy"] }
ron = "0.8.1"
