[package]
name = "atlas_runtime"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/atlas77-lang/Atlas77"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["compilers"]
homepage = "https://atlas77-lang.github.io/Atlas77/docs/latest/index.html"
license = "MIT"
description = "The Atlas77 compile time runtime"
[lib]
doctest = false

[dependencies]
atlas_frontend = { path = "../atlas_frontend", version = "0.5.1" }
atlas_vm = { path = "../atlas_vm" }