[package]
name = "atlasc"
version = "0.5.1"
edition = "2021"

# doc test is disabled because it's not needed
[lib]
doctest = false

[dependencies]
atlas-core = "0.7.1"
serde = "1.0.217"
miette = { version = "7.4.0", features = ["derive", "fancy"] }
thiserror = { version = "2.0.11" }
bumpalo = "3.16.0"
atlas_vm = { path = "../../runtime/atlas_vm", version = "0.5.1" }