[package]
name = "atlas_lib"
version = "0.5.1"
edition = "2021"
include = ["/libraries/std/*.atlas"]
description = "The Atlas77 Standard & Core Libraries"
license = "MIT"
homepage = "https://atlas77-lang.github.io/atlas77-docs/docs/latest/index.html"
documentation = "https://atlas77-lang.github.io/atlas77-docs/docs/latest/index.html"
repository = "https://github.com/atlas77-lang/Atlas77"

[dependencies]
