[package]
name = "atlas_vm"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "The Atlas77 Virtual Machine"
keywords = ["programming", "language", "compiler", "atlas77"]
categories = ["compilers"]
homepage = "https://atlas77-lang.github.io/atlas77-docs/docs/latest/index.html"
documentation = "https://atlas77-lang.github.io/atlas77-docs/docs/latest/index.html"
repository = "https://github.com/atlas77-lang/Atlas77"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting"] }
rand = "0.9.0"
